samples/_failures_safe/1761312723_82bdc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dc835be.c: In function ‘main’:
./samples/SAFE/__tmp_0dc835be.c:164:5: error: expected expression at end of input
  164 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_0dc835be.c:164:5: error: expected declaration or statement at end of input
